--- a/Proy_Software/FrmLogin.resx
+++ b/Proy_Software/FrmLogin.resx
@@ -117,4 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAANRJREFUWEft
+        kksOAUEURXuOGbaDJRBbEWMsiFgCMcVS/KY+5/ZnIt1KdT8JUSc5SVf161e3qjoK/CJtnOEOL6lbnGIL
+        P8oQT3gv8IgD/Aha/IZaaI4drKV2cYF6d8U+mqJjz3Y+0kQBY1TNAZuasEJ3nu3cxRJVO4lHRuxRTXXs
+        LnqoWv2YZpxRTevx6DUNVK2uzAw1lO/iW+/kPwNkTaz0Jq9JFb0p/eETIUAIYBpgg+vkMcY1FqYB1HyV
+        PMa4xsI0QBlCgBCgcgArvclrUsXANxJFD0MeudfyRd0EAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAkxJREFUWEft
+        1snOTEEchvFeIOZpZw6CEMIecQnYGyKGGxDBHXAZiISIeQoWppBgR0wrIXaImY3peTr+SfXpqj6n6c2X
+        9Jv8Fl+dqj41n681zDAjIdOwDWfwDF/wDa9wHnswHwPPOOzHB/yu8QuXsQYDyUw8QLzgCnZgCSbAzi3E
+        JlzED0RHjsL2/xwbO73+oFPeZFRzcADfYbtP2Im+48hi5NcxFZHZOAF/XCexCGkW4Cxsr8NwxhrHNbfh
+        U1Rf/g7xw8GyWahmM9ys1nkI29fG3R4brjrtjtxyd70v1IW/ZceRy1I8gXVc0mXoGY+ald1w1TjlPktH
+        67pbZqdLcVB3YL23WIViTsOK29t/deYjfJZOZZMOmPG4BOu+wQpk8xxW8qhV4zT7zGm3E/L4WXYMdRmN
+        GOBr2PmuxDRPav/VGV8YRyxlWaMNRsbiJmz3CF3vKXXAdYwNl+PGTE9MKR7xnh3ILcEoXIPlj7EeNtQG
+        eFx9dhXWLWUM4n4oLkGskVduZAss8zhNsaASy6ITnv1cvIj8TljHTbgc2cQxdDSR27DMkZeyEda51f6r
+        M9NxFz73GK5EMa71e1h5rQUkbr+u9UoyGdaxbhovnriIXsKLqTb7YAM/Qk02VikuXXoV567rbDwq92HD
+        G3BW+omf6HOwvQ6hr4+RST/Hnox1qMtcHETcFd6cuRu1cezEPcRIPIq74DpOhNfrYjjVXrM/YT3/ITmC
+        GfjvuBx7ERuzF1/sZbUaA4+bcStOwTP/GV/xAl4uuzEPwwwzEtNq/QFqFsd0AqRQJAAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAASJJREFUWEft
+        l71OAkEUhfddgFLc31bfwYRaFAgxhILKV/CdeA87O9HOjga38DubGzfghjDLbDRxvuQU987sPWeAhNko
+        cEgcx4M8zydZlj36lGamado3m2bYuESf6A29eJZm7gixMLt9dHI2yHxqLe9gPlMI1LNWDR/RPQuvVnYG
+        HhuC3FlZQ4AVi89WdoY85GVlTQgQAoQAIUAIEAL82QD8dY7pP7XUrY35ht7pAYqiuKZXEmLdRno2SZIr
+        G1fhFIAhN/S2VjqjZzXDygqnAKS/pFeij5bSsxc2roLa+TcwpD9qqT1zQc8tgG+OBfjdSynNPou6t8+s
+        5R0OOZcH+nktF5gvbMM7anq5OEeaqdkPZtcMG3ok7eLVTF9x88n/MVH0BbUrTTKBfjvHAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAUVJREFUWEft
+        l00OgjAQhdl7DHFLCHAhFaNGXbjypu5MXPhzB42J7yWjILYFSoka+ZKJdjrpey0UitdRJAzDQZIk4ziO
+        Ny6DY0ZR5IuMGhSuEFfECbFzHBzzAhMLkXuFM0cBxVNJOQfiE5pA9CWVgSUaoeMgzdaAxhFGhtLMgIE1
+        OrfSbA1qUEuaGZ2BMgNBEPTkbymmWisDHBB9e8RMUlpYw1qdCWpYrQD6UsRNu49BxRr7e+AhgNqlpJ7I
+        HjeKk0YGiMpEVXHS2ADJm6gjTpwYIKidU1hiLulSqPH7BvLLjl/tjamisYGHYP6aq3I6qGFtwCRk6stD
+        DSsDVQQq1tQ38BWPYtMLpoip1tqAKzoDJgOfPZQi6aOT5/aJpJyDSU6pgXg/lhPuXyk4I1QfF02CY3Js
+        83sDBX04bePTjJdYPfM/xvPu6RNI5ZxBqZMAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="lineShape2.Bounds" type="System.Drawing.Rectangle, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>40, 237, 255, 0</value>
+  </metadata>
+  <metadata name="lineShape2.Location" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>40, 237</value>
+  </metadata>
+  <metadata name="lineShape2.Size" type="System.Drawing.Size, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>255, 0</value>
+  </metadata>
+  <metadata name="lineShape1.Bounds" type="System.Drawing.Rectangle, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>38, 165, 256, 0</value>
+  </metadata>
+  <metadata name="lineShape1.Location" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>38, 165</value>
+  </metadata>
+  <metadata name="lineShape1.Size" type="System.Drawing.Size, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>256, 0</value>
+  </metadata>
 </root>
